Fixed another glitch where the diffuse color didn't attenuate diffuse rays